2006-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: 
	
	Update intltool requirement to 0.35.

2006-05-15  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-05-15  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.2 ===

	* NEWS:

2006-05-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/EphyUtils.cpp:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/MozDownload.cpp:
	* embed/mozilla/mozilla-embed-persist.cpp:
	* embed/mozilla/mozilla-embed-single.cpp:
	* embed/mozilla/mozilla-notifiers.cpp:
	* embed/mozilla/mozilla-x509-cert.cpp:

	Some castings.

2006-05-14  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:
	* embed/mozilla/EphyUtils.h:
	* embed/mozilla/EventContext.cpp:

	Use nsAString::Equals.

2006-05-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (resolve_cb),
	(ephy_local_bookmarks_init), (ephy_local_bookmarks_stop):

	Add https and ftp local bookmarks. Based on a patch by Celso Pinto,
	bug #330679.

2006-05-14  Christian Persch  <chpe@cvs.gnome.org>

	* doc/epiphany.1:
	
        Manpage update from Victor Osadci.

2006-05-12  Christian Persch  <chpe@cvs.gnome.org>

        * configure.ac:

	Explicit error message about unsupported gecko versions.

2006-05-12  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySidebar.cpp:

	The API is also changed on 1.8 branch, adapt the #ifdef accordingly.

2006-05-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Update gecko version checks to detect also gecko 1.8.1.

2006-05-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* data/default-prefs-common.js:
	R data/default-prefs-gecko-1-8.js:
	R data/default-prefs-mozilla.js: