@@ -1,3 +1,14 @@
+2006-05-16  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* lib/ephy-node.h:
+	* lib/ephy-node.c:
+	* src/epiphany.defs:
+
+	Add methods to EphyNode to set typed properties. This change improves the
+	Python API so it should be easy now to play with bookmarks.
+
+	Also clean up the code with unnecessary checks.
+
 2006-05-16  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.in: 
